<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/gray"
    android:fillViewport="true"
    tools:context=".presentation.tabs.QuoteFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_margin="8dp"

        android:background="@drawable/rounded"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_margin="12dp"
                android:layout_height="wrap_content"
                android:text="@string/quotation_generator"
                android:textColor="@color/black"
                android:textSize="16sp"
                />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dividerColor="@color/gray"


                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:weightSum="3"
                    android:layout_margin="16dp"
                    android:gravity="center_vertical"

                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/paint_area_m_2"
                        android:textColor="@color/black" />
                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_weight="1.2"
                        app:cardBackgroundColor="#7CD3D5D5"
                        app:cardElevation="0dp"
                        app:cardCornerRadius="10dp"
                        android:layout_height="40dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:hint="@string/_0"
                            android:layout_gravity="center"
                            android:inputType="numberDecimal"
                            android:textAlignment="center"
                            android:layout_height="match_parent"
                            android:backgroundTint="@android:color/transparent"
                            />

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.8"
                        android:layout_marginLeft="8dp"
                        android:layout_height="wrap_content"

                        android:text="@string/m_2"
                        android:textColor="@color/black" />


                </LinearLayout>
                <LinearLayout
                    android:layout_marginHorizontal="16dp"
                    android:weightSum="3"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"

                        android:text="@string/types_of_paint"
                        android:textColor="@color/black" />
                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_weight="1.2"
                        app:cardBackgroundColor="#7CD3D5D5"
                        app:cardElevation="0dp"
                        app:cardCornerRadius="10dp"
                        android:layout_height="40dp">

                        <Spinner
                            android:id="@+id/spinner_id"
                            android:layout_width="match_parent"
                            android:gravity="center"
                            android:textAlignment="center"
                            android:layout_gravity="center_vertical"
                            android:layout_height="match_parent"
                            android:entries="@array/your_array_name" />

                    </androidx.cardview.widget.CardView>



                </LinearLayout>
                <LinearLayout
                    android:layout_marginHorizontal="16dp"
                    android:weightSum="3"
                    android:layout_marginTop="16dp"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"

                        android:text="@string/color_of_paint"
                        android:textColor="@color/black" />
                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_weight="1.2"
                        app:cardBackgroundColor="#7CD3D5D5"
                        app:cardElevation="0dp"
                        app:cardCornerRadius="10dp"
                        android:layout_height="40dp">

                        <Spinner
                            android:id="@+id/spinner_color"
                            android:layout_width="match_parent"
                            android:gravity="center"
                            android:textAlignment="center"
                            android:layout_gravity="center_vertical"
                            android:layout_height="match_parent"
                            android:entries="@array/color_array" />

                    </androidx.cardview.widget.CardView>



                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:weightSum="3"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:gravity="center_vertical"

                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/time_required"
                        android:textColor="@color/black" />
                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_weight="1.2"
                        app:cardBackgroundColor="#7CD3D5D5"
                        app:cardElevation="0dp"
                        app:cardCornerRadius="10dp"
                        android:layout_height="40dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_gravity="center"
                            android:layout_height="match_parent"
                            android:hint="0"
                            android:inputType="number"
                            android:textAlignment="center"
                            android:backgroundTint="@android:color/transparent"
                            />

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.8"
                        android:layout_marginLeft="8dp"
                        android:layout_height="wrap_content"

                        android:text="@string/days"
                        android:textColor="@color/black" />


                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:weightSum="2"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center_vertical"

                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"

                        android:layout_height="wrap_content"
                        android:text="@string/level_of_surface_preperation"
                        android:textColor="@color/black" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:orientation="vertical"
                        android:gravity="center_horizontal"
                        android:layout_weight="1"
                        android:layout_height="wrap_content">


                        <TextView
                            android:layout_width="wrap_content"
                            android:text="3"
                            android:id="@+id/tvSeekbar"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:layout_height="wrap_content"/>

                        <androidx.appcompat.widget.AppCompatSeekBar
                            android:layout_width="match_parent"
                            android:progress="3"
                            android:id="@+id/seekBar"
                            android:padding="0dp"
                            android:layout_margin="0dp"
                            android:max="5"
                            android:layout_height="wrap_content"/>
                        <com.google.android.material.slider.Slider
                            android:layout_width="wrap_content"
                            android:valueFrom="0"
                            android:valueTo="5"
                            android:value="3"
                            android:layout_height="wrap_content"/>


                    </LinearLayout>











                </LinearLayout>



            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_height="wrap_content">


        </LinearLayout>


    </RelativeLayout>
</ScrollView>