<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/gray"
    android:fillViewport="true"
    tools:context=".presentation.CustomerInformationFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/rounded">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnBack"
                    android:src="@drawable/baseline_arrow_back_24"
                    android:backgroundTint="@color/white"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:text="@string/customer_information"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dividerColor="@color/gray" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Name:"

                        android:textColor="@color/black" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1.5"
                        app:cardBackgroundColor="#7CD3D5D5"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="0dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:backgroundTint="@android:color/transparent"
                            android:hint="Enter name"
                            android:textSize="14sp"
                            android:id="@+id/tvName"

                            android:layout_marginLeft="8dp"
                            android:inputType="numberDecimal"
                             />

                    </androidx.cardview.widget.CardView>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_vertical"

                    android:weightSum="3">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Phone number:"
                        android:textColor="@color/black" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1.5"
                        app:cardBackgroundColor="#7CD3D5D5"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="0dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:backgroundTint="@android:color/transparent"
                            android:hint="Enter phone no"
                            android:id="@+id/tvPhone"
                            android:textSize="14sp"

                            android:layout_marginLeft="8dp"
                            android:inputType="numberDecimal"
                             />

                    </androidx.cardview.widget.CardView>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_vertical"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"

                        android:text="Date:"
                        android:textColor="@color/black" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1.5"
                        app:cardBackgroundColor="#7CD3D5D5"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="0dp">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginHorizontal="12dp"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Select date"
                                android:id="@+id/tvDate"
                                android:layout_gravity="center_vertical"

                                />
                            <Space
                                android:layout_width="0dp"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                />

                            <ImageButton
                                android:id="@+id/btnEndDate"
                                android:layout_width="wrap_content"
                                android:background="?selectableItemBackgroundBorderless"
                                android:layout_height="wrap_content"
                                android:src="@drawable/baseline_date_range_24"
                                />
                        </LinearLayout>


                    </androidx.cardview.widget.CardView>


                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_vertical"

                    android:weightSum="3">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/paint_area_m_2"
                        android:textColor="@color/black" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1.5"
                        app:cardBackgroundColor="#7CD3D5D5"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="0dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:backgroundTint="@android:color/transparent"
                            android:hint="@string/_0"
                            android:id="@+id/tvPaintArea"
                            android:inputType="numberDecimal"
                            android:textAlignment="center" />

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_weight="0.4"

                        android:text="@string/m_2"
                        android:textColor="@color/black" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_vertical"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"

                        android:text="@string/types_of_paint"
                        android:textColor="@color/black" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1.8"
                        app:cardBackgroundColor="#7CD3D5D5"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="0dp">

                        <Spinner
                            android:id="@+id/spinner_id"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"

                            android:layout_gravity="center_vertical"
                            android:entries="@array/your_array_name"
                            android:gravity="center"
                             />

                    </androidx.cardview.widget.CardView>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="16dp"
                    android:gravity="center_vertical"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"

                        android:text="@string/color_of_paint"
                        android:textColor="@color/black" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1.5"
                        app:cardBackgroundColor="#7CD3D5D5"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="0dp">

                        <Spinner
                            android:id="@+id/spinner_color"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:entries="@array/color_array"
                            android:gravity="center"
                            />

                    </androidx.cardview.widget.CardView>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="16dp"
                    android:gravity="center_vertical"

                    android:weightSum="3">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/time_required"
                        android:textColor="@color/black" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1.5"
                        app:cardBackgroundColor="#7CD3D5D5"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="0dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:backgroundTint="@android:color/transparent"
                            android:hint="0"
                            android:id="@+id/timeRequired"
                            android:inputType="number"
                            android:textAlignment="center" />

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_weight="0.4"

                        android:text="@string/days"
                        android:textColor="@color/black" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="20dp"
                    android:gravity="center_vertical"

                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"

                        android:layout_weight="1"
                        android:text="@string/level_of_surface_preperation"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:text="0"
                        android:textAlignment="center"
                        android:id="@+id/tvPercentage"
                        android:layout_height="wrap_content"

                        />


<!--                    <com.google.android.material.slider.Slider-->
<!--                        android:id="@+id/seekBar"-->
<!--                        android:layout_width="0dp"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_weight="1"-->
<!--                        android:stepSize="1"-->
<!--                        android:value="3"-->
<!--                        android:valueFrom="1"-->
<!--                        android:valueTo="5" />-->


                </LinearLayout>



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="12dp"
                    android:text="Total Cost: $100"
                    android:id="@+id/tvCost"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="12dp"
                    app:cardBackgroundColor="@color/gray"
                    app:strokeWidth="0dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="38dp"
                        android:text="[insert price breakdown]"
                        android:textSize="18sp" />
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="14dp"
                    android:id="@+id/btnDelete"
                    android:backgroundTint="#F80C0C"
                    android:text="    Delete    "
                    android:layout_marginTop="16dp"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:cornerRadius="8dp"

                    />
            </LinearLayout>

        </LinearLayout>




    </RelativeLayout>

</ScrollView>